# memorax

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pre-commit-config.yaml  pyproject.toml  recurrent_burn.py  recurrent_burn_factor.py  setup.py  test.py  train.sh  train_drqn_umbrella_chain.sh  train_rppo_craftax.sh  train_rppo_memory_chain.sh  train_rppo_popgym.sh  train_rpqn_craftax.sh  train_rpqn_memory_chain.sh  train_rpqn_umbrella_chain.sh
baselines/: .gitignore  benchmark.py  launch_popjym.sh  main.py
baselines/config/: config.yaml
baselines/scripts/: benchmark.sh  ppo_brax.sh  ppo_popjym.sh  pqn_popgym_arcade.sh  pqn_popjym.sh  r2d2_popjym.sh
docs/: Makefile  requirements-rtd.txt
docs/_static/: custom.css
docs/source/: conf.py  index.md
examples/: ac_lambda_gymnasium.py  ac_lambda_minatar.py  ac_lambda_rtrl_minatar.py  ddippo_jaxmarl.py  ddippo_mettagrid.py  ddppo_brax.py  ddppo_cartpole.py  debug.py  dqn_ale.py  dqn_atari.py  dqn_cartpole.py  dqn_gxm.py  drqn_bsuite.py  gradient_ppo_brax.py  gradient_ppo_cartpole.py  gradient_ppo_craftax.py  impala_cartpole.py  impala_cogames.py  ippo_jaxmarl.py  ippo_mettagrid.py  ippo_mettagrid_multigpu.py  irppo_icm_deepsea.py  kalman.py  mappo_cogames.py  mappo_jaxmarl.py  mapqn_cogames.py  meta_ppo_cartpole.py  meta_ppo_meta_maze.py  ppo_brax.py  ppo_cartpole.py  ppo_cogames.py  ppo_continuous_cartpole.py  ppo_gpt2.py  ppo_grimax.py  ppo_gxm.py  ppo_pendulum.py  ppo_pobax.py  ppo_popjym.py  ppo_trxl.py  ppoc_cartpole.py  (+14 more)
examples/architectures/: ppo_ffm.py  ppo_gpt2.py  ppo_gru.py  ppo_gtrxl.py  ppo_linear_attention.py  ppo_lru.py  ppo_mamba.py  ppo_mingru.py  ppo_moe.py  ppo_retnet.py  ppo_rtrl.py  ppo_s5.py  ppo_xlstm.py
memorax/: __init__.py
memorax/algorithms/: __init__.py  ac_lambda.py  algorithm.py  ddippo.py  ddppo.py  dqn.py  drqn.py  gradient_ppo.py  impala.py  ippo.py  irppo.py  mappo.py  mapqn.py  ppo.py  ppo_continuous.py  ppoc.py  pqn.py  r2d2.py  rppo.py  rppo_continuous.py  rpqn.py  rsac.py  rsacd.py  sac.py  sacd.py  soft_pqn.py  unified_dqn.py
memorax/buffers/: __init__.py  episode_buffer.py  prioritised_episode_buffer.py
memorax/environments/: __init__.py  ale.py  brax.py  cogames.py  craftax.py  environment.py  grimax.py  gxm.py  gymnax.py  jaxmarl.py  mettagrid.py  mujoco.py  navix.py  noisy_memory_chain.py  pettingzoo.py  pobax.py  popgym_arcade.py  popjym.py  pufferlib.py  test_tmaze_sample_usage.py  tmaze_env.py  (+1 more)
memory_rl/: __init__.py  algorithm.py  dqn.py  drqn.py  drqn_cleanup.py  gpt2_jax.py  main.py  networks.py  networks2.py  ppo.py  ppo_gru.py  ppo_rnn.py  recurrent_networks.py  requirements.txt  sac.py  sweep.yaml  xlstm_jax.py
paper/: main.aux  main.bbl  main.blg  main.tex  references.bib  rlc.bst  rlc.sty
plots/: plot.py  plot_metrics.py  plot_metrics_rliable.py  plot_rliable_metrics.py
scripts/: plot.py  train_dqn_memory_chain.sh  train_dqn_minatar.sh  train_drqn_memory_chain.sh  train_drqn_minatar.sh  train_drqn_popgym.sh  train_memory_chain.sh  train_minatar.sh  train_ppo_craftax.sh  train_ppo_memory_chain.sh  train_ppo_minatar.sh  train_pqn_memory_chain.sh  train_pqn_minatar.sh  train_rppo_memory_chain.sh  train_rppo_minatar.sh  train_rppo_popgym.sh  train_rppo_umbrella_chain.sh  train_rpqn_craftax.sh  train_rpqn_memory_chain.sh  train_rpqn_minatar.sh  train_rpqn_umbrella_chain.sh  train_rsacd_memory_chain.sh  train_rsacd_minatar.sh  train_sacd_memory_chain.sh  train_sacd_minatar.sh
tests/: common.py  conftest.py  test_algorithms.py  test_buffers.py  test_dqn.py  test_environments.py  test_heads.py  test_pallas_kernel.py  test_ppo.py  test_ppo_continuous.py  test_pqn.py  test_rtrl.py  test_sac.py  test_sequence_models.py
(+9493 files in other folders)
