[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages   = ["memory_rl", "popjaxrl"]
py-modules = ["main", "sweep"] 

[project]
name = "memory-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.18"
dependencies = [
    "jax===0.6.0",
    "brax>=0.12.4",
    "distrax>=0.1.5",
    "flashbax>=0.1.3",
    "flax>=0.10.7",
    "gymnax>=0.0.9",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "jumanji>=1.1.1",
    "navix>=0.7.0",
    "omegaconf>=2.3.0",
    "wandb>=0.21.0",
    "hydra-joblib-launcher>=1.2.0",
    "pobax>=0.0.1",
    "craftax>=1.5.0",
    "tqdx>=0.1.3",
    "orbax>=0.1.9",
    "pgx>=2.6.0",
    "gxm",
    "rliable",
    "optuna>=2.10.1",
    "optuna-integration>=4.5.0",
    "hydra-optuna-sweeper>=1.2.0",
    "playground>=0.0.5",
    "neptune-scale>=0.27.0",
    "tensorboard>=2.20.0",
]

[project.optional-dependencies]
cuda = ["jax[cuda12]", "envpool"]


[project.scripts]
main = "main:main"
sweep = "sweep:main"

[dependency-groups]
commit = [
    "pre-commit>=4.2.0",
]

[tool.uv]
package = true

[tool.uv.sources]
gxm = { git = "https://github.com/huterguier/gxm", rev = "dev" }
rliable = { git = "https://github.com/google-research/rliable" }

